Return standardized jarfile URLs from ClassGraph#getClasspathURLs()